dark mode fix

--- a/src/styles/sass/global.scss
+++ b/src/styles/sass/global.scss
@@ -14,6 +14,77 @@ ol {
   margin-left: 1.2rem;
 }
 
+//Home page //
+.welcome {
+  text-align: left;
+  padding: 1rem;
+  width: 50%;
+}
+.welcome p {
+  font-size: 1.2rem;
+}
+.scrambleDiv {
+  display: flex;
+  align-items: flex-end;
+  height: auto;
+  font-size: 1.8rem;
+  display: block;
+  padding: 1rem;
+}
+#createdBy {
+  font-size: 1rem;
+  text-align: right;
+  padding: 1rem;
+  margin-top: 2.5rem;
+}
+#createdBy a {
+  color: blue;
+}
+// About //
+
+.aboutTitle {
+  text-align: center;
+  color: black;
+  font-size: 3.2rem;
+  font-family: "Staatliches", cursive;
+}
+.modal {
+  background-color: darkgray;
+}
+.aboutPopupContent {
+  color: black;
+  width: 95%;
+  margin: 0 auto;
+  padding: 0.8rem;
+  font-size: 1.45rem;
+  text-align: center;
+}
+.buttonPopup {
+  text-align: center;
+  margin: 0 auto;
+  padding: 0.5rem;
+}
+.popup-content {
+  margin: auto;
+  background: rgb(255, 255, 255);
+  width: 50%;
+  padding: 5px;
+}
+.popup-arrow {
+  color: black;
+}
+.close {
+  color: black;
+  padding: 0.5rem;
+  font-size: 1.5rem;
+}
+.popup-overlay {
+  background: rgba(0, 0, 0, 0.5);
+}
+[data-popup="tooltip"].popup-overlay {
+  background: transparent;
+}
+
 @media screen and (min-width: 2000px) {
   ol {
     margin-left: 4rem;
